Change ward attributes to use same format as councils/members Added more demographic dataset_topics Tweaked styling of attributes (to avoid prob with missing values throwing alignment out of whack etc) Suppressed showing of ons_statistics while production db is being populated

--- a/public/stylesheets/twfy_local.css
+++ b/public/stylesheets/twfy_local.css
@@ -188,11 +188,12 @@ body {
 	}
 .attributes dt {
 	float: left;
-	width: 10em;
+	width: 11em;
 	clear: left;
+	text-align:right;
 }
 .attributes dd {
-	margin-left: 11em;
+	float:left;
 }
 .extra_info  {
 	clear: both;
